--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap");
 
 * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+html {
+    scroll-behavior: smooth;
+}
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -235,7 +243,7 @@ header nav .icons a:hover {
 }
 .hero .div_text p {
     margin: 30px 0;
-    font-size: 15px;
+    font-size: 20px;
     width: 80%;
     line-height: 1.7;
 }
@@ -244,17 +252,17 @@ header nav .icons a:hover {
     padding: 18px 30px;
 }
 .hero .div_img {
-    width: 40%;
+    width: 25%;
     position: relative;
     border-radius: 0 0 600px 600px;
     overflow: hidden;
 }
-.hero .div_img .bg_img {
+/*.hero .div_img .bg_img {
     position: absolute;
     left: 0;
     bottom: 0;
     z-index: -1;
-}
+}*/
 
 
 
@@ -305,7 +313,7 @@ header nav .icons a:hover {
     color: var(--main_color);
 }
 .about .container .div_img {
-    width: 35%;
+    width: 25%;
 }
 /*.about .container .div_img img {
     width: 300px;
@@ -688,7 +696,7 @@ header .links .logo,
         padding: 14px 30px;
     }
     .hero .div_img {
-        width: 75%;
+        width: 60%;
     }
 
 
@@ -705,8 +713,9 @@ header .links .logo,
         width: 100%;
         font-size: 14px;
     }
-    .about .container .div_img img {
-        width: 100%;
+    .about .container .div_img {
+        visibility: hidden;
+        width: 0%;
     }
 
     .top_section h2 {
